<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Armadillo">

    <EditText
        android:id="@+id/appearanceSelectionText"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/sprite1ImageButton"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="362dp"
        tools:text="@string/appearanceSelectionText" />

    <EditText
        android:id="@+id/nameInputText"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/nameInputLayout"
        app:layout_constraintBottom_toBottomOf="@+id/nameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/nameInputText" />

    <TextView
        android:id="@+id/initialConfigText"
        android:layout_width="342dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nameInputText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        tools:text="@string/initialConfigText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/spriteRadioGroup"
        android:layout_width="379dp"
        android:layout_height="58dp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="271dp">

        <RadioButton
            android:id="@+id/sprite1Button"
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:text="@string/easyButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sprite2Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/sprite2Button"
            android:layout_width="98dp"
            android:layout_height="52dp"
            android:layout_marginEnd="16dp"
            android:text="@string/mediumButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sprite3Button"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/sprite3Button"
            android:layout_width="111dp"
            android:layout_height="51dp"
            android:layout_marginStart="268dp"
            android:text="@string/hardButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/difficultySelectionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:hint="@string/nameInputHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/difficultySelectionText"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/easyButton"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="220dp"
        tools:text="@string/difficultySelectionText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="424dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="424dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="424dp"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/spriteRadioGroup"
        android:layout_width="379dp"
        android:layout_height="58dp"
        android:layout_marginTop="572dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="18dp">

        <RadioButton
            android:id="@+id/sprite1Button"
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:text="@string/sprite1Context"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sprite2Button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <RadioButton
            android:id="@+id/sprite2Button"
            android:layout_width="98dp"
            android:layout_height="52dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sprite2Context"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sprite3Button"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/sprite3Button"
            android:layout_width="111dp"
            android:layout_height="51dp"
            android:layout_marginStart="268dp"
            android:text="@string/sprite3Context"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="206dp"
        android:layout_height="78dp"
        android:layout_marginBottom="16dp"
        android:text="@string/startButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>